[gd_scene load_steps=8 format=3 uid="uid://bqhd40ioc80w0"]

[ext_resource type="Script" path="res://RoadManager.gd" id="1_vluaq"]
[ext_resource type="Script" path="res://NothingEvents.gd" id="2_h0qpe"]
[ext_resource type="Script" path="res://CombatManager.gd" id="3_fgcp2"]
[ext_resource type="Script" path="res://LivingBeings.gd" id="4_e2v5r"]

[sub_resource type="Gradient" id="Gradient_8l75a"]
offsets = PackedFloat32Array(0, 0.96, 1)
colors = PackedColorArray(0.147672, 0.147672, 0.147672, 1, 0.143325, 0.139055, 0.142186, 0.854902, 0.14, 0.1344, 0.1358, 0.478431)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wjy8f"]
gradient = SubResource("Gradient_8l75a")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ed3gc"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vluaq")

[node name="LeftPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(423, 786)
layout_mode = 0
offset_right = 423.0
offset_bottom = 786.0

[node name="Sprite2D2" type="Sprite2D" parent="LeftPanel"]
position = Vector2(212, 104)
scale = Vector2(6.125, 2.75)
texture = SubResource("GradientTexture2D_wjy8f")

[node name="EventLabel" type="RichTextLabel" parent="LeftPanel"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 400.0
offset_bottom = 184.0
autowrap_mode = 1

[node name="btn_move_forward" type="Button" parent="LeftPanel"]
layout_mode = 0
offset_left = 344.0
offset_top = 744.0
offset_right = 416.0
offset_bottom = 776.0
text = "Вперёд"

[node name="AttackList" type="ItemList" parent="LeftPanel"]
layout_mode = 0
offset_left = 424.0
offset_top = 648.0
offset_right = 712.0
offset_bottom = 784.0
scale = Vector2(1.00266, 1.01656)

[node name="HPBar" type="RichTextLabel" parent="LeftPanel"]
clip_contents = false
layout_mode = 0
offset_left = 16.0
offset_top = 208.0
offset_right = 88.0
offset_bottom = 240.0
theme_override_colors/table_border = Color(0.868985, 0.868985, 0.868985, 1)
theme_override_colors/table_even_row_bg = Color(0.775063, 0.775063, 0.775063, 1)
theme_override_colors/table_odd_row_bg = Color(0.687215, 0.687215, 0.687215, 1)
theme_override_colors/default_color = Color(0.60933, 0.60933, 0.60933, 1)
theme_override_colors/font_selected_color = Color(0.593134, 0.593134, 0.593134, 1)
theme_override_colors/selection_color = Color(0.633757, 0.633757, 0.633757, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.60933, 0.60933, 0.60933, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ed3gc")
bbcode_enabled = true

[node name="RoadTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 424.0
offset_right = 1200.0
offset_bottom = 784.0

[node name="GoblinTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 424.0
offset_right = 1200.0
offset_bottom = 784.0

[node name="NothingEvents" type="Node" parent="."]
script = ExtResource("2_h0qpe")

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("3_fgcp2")

[node name="LivingBeings" type="Node" parent="."]
script = ExtResource("4_e2v5r")
